Social links updated

--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ disqus_shortname:   taylantatli
 #bing-verify:
 #email:
 twitter:            username
-facebook:           username
+facebook:           Sh3yk0.dev
 github-url:         username
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 linkedin:          username
@@ -61,6 +61,10 @@ instagram:          username
 #keybase:           username
 #xmpp:              username@server.com
 #hackernews:        username
+hackthebox:         526194
+platzi:             sheyko-kh
+freecodecamp:       sheykowk
+
 
 # Gems
 gems:
