--- a/_config.yml
+++ b/_config.yml
@@ -38,13 +38,13 @@ disqus_shortname:   sh3yk0
   #ad-slot:
 #bing-verify:
 #email:
-twitter:            DevSh3yk0
+#twitter:            DevSh3yk0
 #facebook:           Sh3yk0.dev
 github-url:         SheykoWk
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 linkedin:          sh3yk0
 #xing:              username
-instagram:          sh3yk0_wk
+#instagram:          sh3yk0_wk
 #lastfm:            username
 #tumblr:            username
 #medium:            '@username'
@@ -63,7 +63,7 @@ instagram:          sh3yk0_wk
 #hackernews:        username
 hackthebox:         526194
 platzi:             sheyko-kh
-freecodecamp:       sheykowk
+#freecodecamp:       sheykowk
 
 
 # Gems
