--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description:        "An aspiring developer who loves to take on new projects tha
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
-background:         'assets/img/placeholder-big.png'
+background:         'assets/img/placeholder-big.gif'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             es_MX
 url:                https://sheykowk.github.io
